Change Log for XavaProjects
===========================

XavaProjects 2024.10 (2024-10-14)
---------------------------------
- New MyCalendar module.
- Resize columns for lists enabled.
- Default columns for list mode of Issue refined.
- Property plannedFor added to Issue.
- IssueType and IssueStatus has a useAsDefaultValueForMyCalendar property.
- Properties startDate and endDate added to Period.
- Properties userName and email added to Worker.
- OpenXava upgraded to OpenXava 7.4.1.

XavaProjects 2024.09 (2024-9-17)
--------------------------------
- OpenXava upgraded to OpenXava 7.4.

XavaProjects 2024.06 (2024-6-18)
--------------------------------
- OpenXava upgraded to OpenXava 7.3.3.
- Fix: DOWNLOAD FROM GITHUB button in Welcome page does not work.

XavaProjects 2024.05bis (2024-5-28)
-----------------------------------
- OpenXava upgraded to OpenXava 7.3.2.

XavaProjects 2024.05 (2024-5-7)
-------------------------------
- OpenXava upgraded to OpenXava 7.3.1.

XavaProjects 2024.04 (2024-4-16)
--------------------------------
- OpenXava upgraded to OpenXava 7.3.

XavaProjects 2024.01bis (2024-1-30)
-----------------------------------
- OpenXava upgraded to OpenXava 7.2.3.

XavaProjects 2024.01 (2024-1-8)
-------------------------------
- OpenXava upgraded to OpenXava 7.2.2.

XavaProjects 2023.12 (2023-12-11)
---------------------------------
- OpenXava upgraded to OpenXava 7.2.1.

XavaProjects 2023.11 (2023-11-22)
---------------------------------
- OpenXava upgraded to OpenXava 7.2.

XavaProjects 2023.09 (2023-9-19)
--------------------------------
- OpenXava upgraded to OpenXava 7.1.6.

XavaProjects 2023.08bis (2023-8-18)
-----------------------------------
- OpenXava upgraded to OpenXava 7.1.5.

XavaProjects 2023.08 (2023-8-9)
--------------------------------
- OpenXava upgraded to OpenXava 7.1.4.

XavaProjects 2023.07 (2023-7-18)
--------------------------------
- OpenXava upgraded to OpenXava 7.1.3.

XavaProjects 2023.06bis (2023-6-26)